--- a/projeto-perfil/index.html
+++ b/projeto-perfil/index.html
@@ -3,12 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Perfil</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <main>
-        <h1>Perfil</h1>
+        <header class="mainHeader">
+            <h1>Perfil</h1>
+            <button class="editarPerfil">Editar Perfil</button>    
+        </header>
         <div class="principal">
             
             <div class="campo campoNome">
@@ -25,6 +28,7 @@
             </div>
             <p class="mensagemImagem">Nenhuma imagem selecionada</p>
         </div>
+        <hr>
 
         <div class="campo campoNascimento">
             <h2>Nascimento</h2>
